update: 继续改造设备协议处理